tests/ui/parser/issues/issue-5544-a.stderr
error: integer literal is too large
  --> $DIR/issue-5544-a.rs:2:19
   |
LL |     let __isize = 340282366920938463463374607431768211456; // 2^128
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: value exceeds limit of `340282366920938463463374607431768211455`

error: aborting due to 1 previous error

