tests/ui/parser/issues/issue-5544-a.rs
fn main() {
    let __isize = 340282366920938463463374607431768211456; // 2^128
    //~^ ERROR integer literal is too large
}
